--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./app.js"></script>
     <script src="./bootstrap/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
