--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
                     <div class="img">
                         <img src="./image/cobalt.png" alt="">
                     </div>
-                    <div class="input-group mb-3">
-                        <input type="number" class="form-control" placeholder="Code" id="code">
-                        <button class="btn" id="btn">Check</button>
+                        <div class="input-group mb-3">
+                        <input type="number" autofocus autocomplete="off"
+                         class="form-control" placeholder="Code" id="code">
+                        <button class="btn" type="" id="btn">Check</button>
                     </div>
+                    <p id="result"></p>
                 </div>
                 
             </div>
         </div>
     </div>
+    <script src="./base.js"></script>
     <script src="./app.js"></script>
-    <script src="./bootstrap/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
-    </script>
+
 </body>
 
 </html>
